Specify Java 16 via toolchain

--- a/build.gradle
+++ b/build.gradle
@@ -37,8 +37,11 @@ group = pluginGroup
 version = pluginVersion
 ext.internalVersion = pluginVersion + ";" + gitCommitHash
 
-sourceCompatibility = JavaVersion.VERSION_16
-targetCompatibility = JavaVersion.VERSION_16
+java {
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(16)
+    }
+}
 
 repositories {
     mavenLocal()
