--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'com.github.johnrengelman.shadow' version '7.0.0'
+    id "io.github.goooler.shadow" version "8.1.8"
     id "com.jfrog.artifactory" version "4.21.0"
 }
 
@@ -39,11 +39,12 @@ ext.internalVersion = pluginVersion + ";" + gitCommitHash
 
 java {
     toolchain {
-        languageVersion = JavaLanguageVersion.of(16)
+        languageVersion = JavaLanguageVersion.of(21)
     }
 }
 
 repositories {
+    mavenLocal()
     mavenCentral()
     maven {
         name = 'EngineHub Repo'
@@ -60,9 +61,9 @@ repositories {
 }
 
 dependencies {
-    compileOnly 'com.destroystokyo.paper:paper-api:1.15.2-R0.1-SNAPSHOT'
-    compileOnly 'com.sk89q.worldedit:worldedit-core:7.2.0-SNAPSHOT'
-    compileOnly 'com.sk89q.worldedit:worldedit-bukkit:7.2.0-SNAPSHOT'
+    compileOnly 'io.papermc.paper:paper-api:1.21-R0.1-SNAPSHOT'
+    compileOnly 'com.sk89q.worldedit:worldedit-core:7.3.4'
+    compileOnly 'com.sk89q.worldedit:worldedit-bukkit:7.3.4'
     compileOnly 'org.enginehub.jinglenote:jinglenote-core:1.0.0-SNAPSHOT'
     implementation('org.enginehub.jinglenote:jinglenote-bukkit:1.0.0-SNAPSHOT') {
         exclude group: 'org.spigotmc', module: 'spigot-api'
@@ -71,8 +72,8 @@ dependencies {
     implementation 'com.zachsthings.libcomponents:libcomponents-bukkit:1.3.1'
     implementation 'net.sf.opencsv:opencsv:2.0'
 
-    compileOnly 'com.sk89q.worldedit.worldedit-libs:ap:7.2.0-SNAPSHOT'
-    annotationProcessor 'com.sk89q.worldedit.worldedit-libs:ap:7.2.0-SNAPSHOT'
+    compileOnly 'com.sk89q.worldedit.worldedit-libs:ap:7.3.4'
+    annotationProcessor 'com.sk89q.worldedit.worldedit-libs:ap:7.3.4'
     annotationProcessor "com.google.guava:guava:21.0"
 
     testImplementation group: 'junit', name: 'junit', version: '4.12'
@@ -83,12 +84,12 @@ tasks.withType(JavaCompile).configureEach {
 }
 
 task sourcesJar(type: Jar, dependsOn: classes) {
-    classifier = 'sources'
+    archiveClassifier = 'sources'
     from sourceSets.main.allSource
 }
 
 task javadocJar(type: Jar, dependsOn: javadoc) {
-    classifier = 'javadoc'
+    archiveClassifier = 'javadoc'
     from javadoc.destinationDir
 }
 
@@ -121,7 +122,7 @@ jar {
 }
 
 shadowJar {
-    classifier 'dist'
+    archiveClassifier.set('dist')
 
     dependencies {
         include(dependency('com.zachsthings.libcomponents:libcomponents-core'))
